third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/array/no-close-3.stderr
TOML parse error at line 1, column 21
  |
1 | no-close-3 = [42 #]
  |                     ^
invalid array
expected `]`
